// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/SideBar.vue snapshot defalut 1`] = `
<div
  class="side-bar"
>
  <ul
    class="tab-list"
  >
    
    <li
      class=""
    >
      <a
        href="#"
      >
        aa
      </a>
    </li>
    <li
      class="current"
    >
      <a
        href="#"
      >
        bb
      </a>
    </li>
    <li
      class=""
    >
      <a
        href="#"
      >
        cc
      </a>
    </li>
    
  </ul>
  <div
    class="tab-content"
  >
    
    <div>
      bbb
    </div>
    
  </div>
</div>
`;

exports[`src/components/SideBar.vue snapshot delighlight 1`] = `
<div
  class="side-bar"
>
  <ul
    class="tab-list"
  >
    
    <li
      class="current"
    >
      <a
        href="#"
      >
        aa
      </a>
    </li>
    
  </ul>
  <div
    class="tab-content delighlight"
  >
    
    <div>
      aaa
    </div>
    
  </div>
</div>
`;
